force-app/main/default/objects/ErrorLog__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the class the error originated from</inlineHelpText>
    <label>Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>