force-app/main/default/objects/ErrorLog__c/fields/CodeKey__c.field-meta.xml
<CustomField>
    <fullName>CodeKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Something that identifies what the code is trying to do</inlineHelpText>
    <label>Code Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>