force-app/main/default/objects/ErrorLog__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A description of the error</inlineHelpText>
    <label>Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>