force-app/main/default/objects/ErrorLog__c/fields/DMLQueriesLog1Start__c.field-meta.xml
<CustomField>
    <fullName>DMLQueriesLog1Start__c</fullName>
    <inlineHelpText>The number of DML queries at the start of the Log1 process</inlineHelpText>
    <label>DML Queries Log1 Start</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>