force-app/main/default/objects/ErrorLog__c/fields/DMLQueriesLog2End__c.field-meta.xml
<CustomField>
    <fullName>DMLQueriesLog2End__c</fullName>
    <inlineHelpText>The number of queries at the end of the Log2 Process</inlineHelpText>
    <label>DML Queries Log2 End</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>