force-app/main/default/objects/ErrorLog__c/fields/DMLQueriesLog2Start__c.field-meta.xml
<CustomField>
    <fullName>DMLQueriesLog2Start__c</fullName>
    <inlineHelpText>The number of queries at the start of Log2</inlineHelpText>
    <label>DML Queries Log2 Start</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>