force-app/main/default/objects/ErrorLog__c/fields/DMLQueriesStart__c.field-meta.xml
<CustomField>
    <fullName>DMLQueriesStart__c</fullName>
    <inlineHelpText>The number of DML queries at the start of the process</inlineHelpText>
    <label>DML Queries Start</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>