force-app/main/default/objects/ErrorLog__c/fields/DMLType__c.field-meta.xml
<CustomField>
    <fullName>DMLType__c</fullName>
    <inlineHelpText>What type of DML operation was performed?</inlineHelpText>
    <label>DML Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>