force-app/main/default/objects/ErrorLog__c/fields/Log1End__c.field-meta.xml
<CustomField>
    <fullName>Log1End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>End time for a secondary process within the log</inlineHelpText>
    <label>Log1 End</label>
    <type>DateTime</type>
</CustomField>