force-app/main/default/objects/ErrorLog__c/fields/Log1Start__c.field-meta.xml
<CustomField>
    <fullName>Log1Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Start time for a secondary process within the log</inlineHelpText>
    <label>Log1 Start</label>
    <type>DateTime</type>
</CustomField>