force-app/main/default/objects/ErrorLog__c/fields/Log2Type__c.field-meta.xml
<CustomField>
    <fullName>Log2Type__c</fullName>
    <inlineHelpText>The type of logging in the Log2 field</inlineHelpText>
    <label>Log2 Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LeadConvert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>