force-app/main/default/objects/ErrorLog__c/fields/MaxRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxRetries__c</fullName>
    <inlineHelpText>What is the maximum number of retries this can attempt?</inlineHelpText>
    <label>Max Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>