force-app/main/default/objects/ErrorLog__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the method this error originated from</inlineHelpText>
    <label>Method Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>