force-app/main/default/objects/ErrorLog__c/fields/NbrFailure__c.field-meta.xml
<CustomField>
    <fullName>NbrFailure__c</fullName>
    <inlineHelpText>The number of records in the batch that failed.</inlineHelpText>
    <label>Nbr Failure</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>