force-app/main/default/objects/ErrorLog__c/fields/NbrRetries__c.field-meta.xml
<CustomField>
    <fullName>NbrRetries__c</fullName>
    <inlineHelpText>The number of times we retried this operation.</inlineHelpText>
    <label>Nbr Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>