force-app/main/default/objects/ErrorLog__c/fields/NbrSuccess__c.field-meta.xml
<CustomField>
    <fullName>NbrSuccess__c</fullName>
    <inlineHelpText>The number of records that were successful</inlineHelpText>
    <label>Nbr Success</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>