force-app/main/default/objects/ErrorLog__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>