force-app/main/default/objects/ErrorLog__c/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API name of the object this error is for.</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>