force-app/main/default/objects/ErrorLog__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The id of the related object</inlineHelpText>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>