force-app/main/default/objects/ErrorLog__c/fields/RowLockError__c.field-meta.xml
<CustomField>
    <fullName>RowLockError__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a result of an UNABLE_TO_LOCK_ROW error?</inlineHelpText>
    <label>Row Lock Error?</label>
    <type>Checkbox</type>
</CustomField>