force-app/main/default/objects/ErrorLog__c/fields/SuccessOnRetry__c.field-meta.xml
<CustomField>
    <fullName>SuccessOnRetry__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this was a retry attempt, were we successful on the retry?</inlineHelpText>
    <label>Success On Retry</label>
    <type>Checkbox</type>
</CustomField>