force-app/main/default/objects/ErrorLog__c/listViews/AccountCurrentClientBatch.listView-meta.xml
<ListView>
    <fullName>AccountCurrentClientBatch</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>CodeKey__c</columns>
    <columns>ObjectId__c</columns>
    <columns>BatchSize__c</columns>
    <columns>NbrSuccess__c</columns>
    <columns>MaxRetries__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClassName__c</field>
        <operation>equals</operation>
        <value>AccountCurrentClientBatch</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>AccountCurrentClientBatch</label>
</ListView>