force-app/main/default/objects/ErrorLog__c/listViews/AccountJunctionMethods_Errors.listView-meta.xml
<ListView>
    <fullName>AccountJunctionMethods_Errors</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>CodeKey__c</columns>
    <columns>ObjectId__c</columns>
    <columns>RowLockError__c</columns>
    <columns>InsufficientAccess__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClassName__c</field>
        <operation>equals</operation>
        <value>AccountJunctionMethods</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>AccountJunctionMethods Errors</label>
</ListView>