force-app/main/default/objects/ErrorLog__c/listViews/AccountOnboardingStatus.listView-meta.xml
<ListView>
    <fullName>AccountOnboardingStatus</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>CodeKey__c</columns>
    <columns>ObjectId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RowLockError__c</columns>
    <columns>SuccessOnRetry__c</columns>
    <columns>BatchSize__c</columns>
    <columns>NbrFailure__c</columns>
    <columns>NbrSuccess__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:2</value>
    </filters>
    <filters>
        <field>LogOnly__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ClassName__c</field>
        <operation>equals</operation>
        <value>AccountOnboardingStatus</value>
    </filters>
    <label>AccountOnboardingStatus</label>
</ListView>