force-app/main/default/objects/ErrorLog__c/listViews/AICPAEmailHelper.listView-meta.xml
<ListView>
    <fullName>AICPAEmailHelper</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>CodeKey__c</columns>
    <columns>ObjectId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RowLockError__c</columns>
    <columns>BatchSize__c</columns>
    <columns>NbrFailure__c</columns>
    <columns>NbrSuccess__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MethodName__c</field>
        <operation>equals</operation>
        <value>processAicpaLeads</value>
    </filters>
    <label>AICPAEmailHelper</label>
</ListView>