force-app/main/default/objects/ErrorLog__c/listViews/All_upsertPosMap.listView-meta.xml
<ListView>
    <fullName>All_upsertPosMap</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>CodeKey__c</columns>
    <columns>ObjectId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>notEqual</operation>
        <value>sdata</value>
    </filters>
    <filters>
        <field>CodeKey__c</field>
        <operation>equals</operation>
        <value>Upsert upsertPosMap</value>
    </filters>
    <label>All-upsertPosMap</label>
</ListView>