force-app/main/default/objects/ErrorLog__c/listViews/ALL_Yesterday.listView-meta.xml
<ListView>
    <fullName>ALL_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>CodeKey__c</columns>
    <columns>ObjectId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>BatchSize__c</columns>
    <columns>Description__c</columns>
    <columns>InsufficientAccess__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeKey__c</field>
        <operation>contains</operation>
        <value>Justin Richard</value>
    </filters>
    <label>ALL - Yesterday</label>
</ListView>