force-app/main/default/objects/ErrorLog__c/listViews/AmplifinityHelper.listView-meta.xml
<ListView>
    <fullName>AmplifinityHelper</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>CodeKey__c</columns>
    <columns>RowLockError__c</columns>
    <columns>SuccessOnRetry__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClassName__c</field>
        <operation>startsWith</operation>
        <value>AmplifinityHelper</value>
    </filters>
    <label>AmplifinityHelper</label>
</ListView>