force-app/main/default/objects/ErrorLog__c/listViews/AssignmentGroupToggleController.listView-meta.xml
<ListView>
    <fullName>AssignmentGroupToggleController</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>CodeKey__c</columns>
    <columns>ObjectId__c</columns>
    <columns>BatchSize__c</columns>
    <columns>NbrFailure__c</columns>
    <columns>RowLockError__c</columns>
    <columns>SuccessOnRetry__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <filters>
        <field>ClassName__c</field>
        <operation>equals</operation>
        <value>AssignmentGroupToggleController</value>
    </filters>
    <label>AssignmentGroupToggleController</label>
</ListView>