force-app/main/default/objects/ErrorLog__c/listViews/CadenceQueueable_No_Row_Lock.listView-meta.xml
<ListView>
    <fullName>CadenceQueueable_No_Row_Lock</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>CodeKey__c</columns>
    <columns>ObjectId__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:15</value>
    </filters>
    <filters>
        <field>ClassName__c</field>
        <operation>equals</operation>
        <value>CadenceQueueable</value>
    </filters>
    <filters>
        <field>RowLockError__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>CadenceQueueable-No Row Lock</label>
</ListView>